Add shell extension interfaces and IUnknown.
Change class factory to call QueryInterface on the class object IUnknown
interface.

Add IUnknown implementation for the interfaces supported by the object
and for the base object, with support for COM aggregate objects.

Add separate file for each shell extension interface supported by the
objects.

Add minimal implementation for IShellExt and IHandlerInfo interfaces.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.10);
 
 set(WIN_SCRIPT_INVOKE_SRCS
+	src/HandlerInfo.cc
+	src/ShellExtInit.cc
+	src/ContextMenu.cc
 	src/ContextMenuHandler.hh
 	src/ContextMenuHandler.cc
 	src/ClassFactory.hh
