Add function to convert single-byte to wchar_t *
Use WinAPI functions ::CharNextExA() and ::MultiByteToWideChar() to
convert strings in the local ANSI codepage, UTF-7 or UTF-8 to wide
character strings wchar_t *.

Start new function to also convert char16_t * and char32_t * to wchar_t
*, based on both C++ std::codecvt and WinAPI ::MultiByteToWideChar().

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,17 @@
 cmake_minimum_required(VERSION 3.10);
 
 set(WIN_SCRIPT_INVOKE_SRCS
+	ScriptFile.hh
+	ScriptFile.cc
 	src/HandlerInfo.cc
 	src/ShellExtInit.cc
+	src/InitializeWithStream.cc
 	src/ContextMenu.cc
 	src/ContextMenuHandler.hh
 	src/ContextMenuHandler.cc
 	src/ClassFactory.hh
 	src/ClassFactory.cc
+	src/Win-ScriptInvoke.hh
 	src/Win-ScriptInvoke.cc)
 
 add_library(Win-ScriptInvoke SHARED ${WIN_SCRIPT_INVOKE_SRCS})
